# MathSolver

./: CMakeLists.txt
includes/details/: BigFixed.h  BigInt.h  RealNumber.h  Utility.h
src/: test.cpp
src/include_src/details/: BigFixed.cpp  BigInt.cpp  BigInt.inl  RealNumber.cpp  RealNumber.inl  Utility.inl
